--- a/tags.html
+++ b/tags.html
@@ -12,6 +12,7 @@ title: 'Tag/Category Index'
 {%- endcapture -%}
 {%- assign tags_list = site_tags | split:',' | sort -%}
 
+** Tag
 {%- for tag in tags_list -%}
     <a href="#{{- tag -}}" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;{{- tag -}}&nbsp;({{site.tags[tag].size}})</a>
 {%- endfor -%}
@@ -43,8 +44,10 @@ title: 'Tag/Category Index'
 {%- endcapture -%}
 {%- assign categories_list = site_categories | split:',' | sort -%}
 
+** Categories
+
 {%- for category in categories_list -%}
-    <a href="#{{- category -}}" class="btn btn-primary category-btn"><i class="fas fa-category" aria-hidden="true"></i>&nbsp;{{- category -}}&nbsp;({{site.categories[category].size}})</a>
+    <a href="#{{- category -}}" class="btn btn-primary category-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;{{- category -}}&nbsp;({{site.categories[category].size}})</a>
 {%- endfor -%}
 
 <div id="full-categories-list">
