--- a/tags.html
+++ b/tags.html
@@ -12,7 +12,7 @@ title: 'Tag/Category Index'
 {%- endcapture -%}
 {%- assign tags_list = site_tags | split:',' | sort -%}
 
-** Tag
+<h2 Tag </h2> &nbsp;
 {%- for tag in tags_list -%}
     <a href="#{{- tag -}}" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;{{- tag -}}&nbsp;({{site.tags[tag].size}})</a>
 {%- endfor -%}
@@ -44,7 +44,8 @@ title: 'Tag/Category Index'
 {%- endcapture -%}
 {%- assign categories_list = site_categories | split:',' | sort -%}
 
-** Categories
+
+<h2 Categories </h2> &nbsp;
 
 {%- for category in categories_list -%}
     <a href="#{{- category -}}" class="btn btn-primary category-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;{{- category -}}&nbsp;({{site.categories[category].size}})</a>
