--- a/archives.html
+++ b/archives.html
@@ -10,6 +10,10 @@ subtitle: 그 동안 진행 하였던 큰 프로젝트들
 {% assign df_strftime_m = site.data.locales[lang].df.archives.strftime | default: '/ %m' %}
 {% assign df_dayjs_m = site.data.locales[lang].df.archives.dayjs | default: '/ MM' %}
 
+<link rel="stylesheet" href="main.bundle.scss">
+
+
+
 <div id="archives" class="pl-xl-3">
   {% for post in site.posts %}
     {% assign cur_year = post.date | date: '%Y' %}
