--- a/archives.html
+++ b/archives.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 # The Archives of posts.
-title: Achive
-subtitle: 그 동안 진행 하였던 큰 프로젝트들
+title: Archive
+subtitle: 그 동안 진행 하였던 프로젝트들..
 ---
 
 {% assign posts = site.posts | sort: "date" | reverse %}
