--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: My website
-subtitle: This is where I will tell my friends way too much about me
+subtitle: 살아가고 일하며 느끼고 배울점을 기록 하는 공간...
 ---
